[gd_scene load_steps=2 format=3 uid="uid://csa1nm825t105"]

[ext_resource type="Script" uid="uid://dqs85bdhqcu7h" path="res://main_menu.gd" id="1_r6qsq"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100
script = ExtResource("1_r6qsq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LineEditUsername" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEditPassword" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonLogin" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Login"

[node name="ButtonRegister" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Register"

[connection signal="pressed" from="VBoxContainer/ButtonLogin" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRegister" to="." method="_on_register_pressed"]
